commit for ManhLe
add function for ManhLe

--- a/WebTour/src/main/resources/templates/User/card.html
+++ b/WebTour/src/main/resources/templates/User/card.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 	<div class="container">
-		<div class="cart-empty">
+	<!-- 	<div class="cart-empty">
 			<h1>Giỏ hàng của bạn</h1>
 			<div class="icon">
 				<i class="fas fa-shopping-bag"></i>
 			</div>
 			<p>Không có sản phẩm nào trong giỏ hàng của bạn</p>
-		</div>
+		</div> -->
 
 		<div class="cart">
 			<table>
