function add promotion, get customer

--- a/WebTour/src/main/resources/templates/Admin/home.html
+++ b/WebTour/src/main/resources/templates/Admin/home.html
@@ -24,8 +24,10 @@
 			</a></li>
 			<li><a href="#"> <i class="fas fa-envelope"> </i> Email
 			</a></li>
-			<li><a th:href="@{/admin/customer-management}"> <i
-					class="fas fa-edit"> </i> Customer
+			<li><a th:href="@{/admin/customer-management}"> <iclass
+						="fasfa-edit"> </i> Customer </a></li>
+			<li><a th:href="@{/admin/promotion-management}"> <i
+					class="fas fa-edit"> </i> Promotion
 			</a></li>
 		</ul>
 	</div>
