--- a/WebTour/src/main/resources/static/css/modal.css
+++ b/WebTour/src/main/resources/static/css/modal.css
@@ -28,6 +28,8 @@
 	position: relative;
 	z-index: 3;
 	animation: growth linear .1s;
+	max-height: 96vh;
+    overflow: hidden;
 }
 
 .auth-form {
@@ -35,16 +37,19 @@
 	background-color: var(--white-color);
 	overflow: hidden;
 	border-radius: 5px;
+	max-height: 100%; 
+    overflow-y: auto;
 }
 
 .auth-form__container {
-	padding: 30px 32px;
+	padding: 26px 32px;
+	max-height: 96vh;
+	overflow-y: auto;
 }
 
 .auth-form__header {
 	display: flex;
 	align-items: center;
-	padding: 0 12px;
 	justify-content: space-between;
 }
 
@@ -72,7 +77,7 @@
 .auth-form__input {
 	width: 100%;
 	height: 40px;
-	margin-top: 16px;
+	margin-top: 12px;
 	padding: 0 12px;
 	font-size: 14px;
 	border: 1px solid var(--border-color);
@@ -98,7 +103,7 @@
 .auth-form__control {
 	display: flex;
 	justify-content: flex-end;
-	margin-top: 40px;
+	margin-top: 20px;
 }
 
 .auth-form__control button {
