--- a/WebTour/src/main/resources/templates/Admin/customer_management.html
+++ b/WebTour/src/main/resources/templates/Admin/customer_management.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Management</title>
+<title>Quản lý khách hàng</title>
 <link rel="stylesheet" href="/css/home_admin.css">
-<link rel="stylesheet" href="/css/modal.css">
 <link rel="stylesheet" href="/css/base.css">
+<link rel="stylesheet" href="/css/customer.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -29,6 +29,9 @@
 			<li><a th:href="@{/admin/customer-management}"> <i
 					class="fas fa-edit"> </i> Customer
 			</a></li>
+			<li><a th:href="@{/admin/promotion-management}"> <i
+					class="fas fa-edit"> </i> Promotion
+			</a></li>
 		</ul>
 	</div>
 	<div class="main-content">
@@ -44,7 +47,7 @@
 			</div>
 		</div>
 		<div class="table-container">
-			<h2>Table head options</h2>
+			<h2 class="mb-20">Customer</h2>
 			<table>
 				<thead>
 					<tr>
@@ -66,7 +69,6 @@
 				</tbody>
 			</table>
 		</div>
-
 	</div>
 </body>
 </html>
