--- a/WebTour/bin/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/bin/src/main/resources/templates/User/detailTour.html
@@ -27,7 +27,7 @@
 				<i class="fas fa-map-marker-alt"> </i>
 				<div>
 					<p>Khởi hành từ</p>
-					<p th:text="${tour.destination}">Khởi hành</p>
+					<p th:text="${tour.departure}">Khởi hành</p>
 				</div>
 
 			</div>
@@ -35,7 +35,7 @@
 				<i class="fas fa-map-marker-alt"> </i>
 				<div>
 					<p>Điểm đến</p>
-					<p th:text="${tour.departure}">Điểm đến</p>
+					<p th:text="${tour.destination}">Điểm đến</p>
 				</div>
 
 			</div>
@@ -134,8 +134,8 @@
 					</div>
 				</div>
 				<div class="buttons">
-					<button type="button" id="book-now">Đặt ngay</button>
 					<button>Liên hệ tư vấn</button>
+					<button type="button" id="book-now">Đặt ngay</button>
 				</div> 
 			</div>
 		</div>
