--- a/WebTour/src/main/resources/static/css/loginStyle.css
+++ b/WebTour/src/main/resources/static/css/loginStyle.css
@@ -45,8 +45,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #ff4b2b;
-	background-color: #ff4b2b;
+	border: 1px solid;
+	background: linear-gradient(45deg, #50e0eb, #57b5eb);
 	color: #ffffff;
 	font-size: 12px;
 	font-weight: bold;
@@ -160,9 +160,7 @@ input {
 }
 
 .overlay {
-	background: #ff416c;
-	background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
-	background: linear-gradient(to right, #ff4b2b, #ff416c);
+	background: linear-gradient(45deg, #50e0eb, #57b5eb);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
