--- a/WebTour/src/main/resources/templates/User/search.html
+++ b/WebTour/src/main/resources/templates/User/search.html
@@ -3,12 +3,13 @@
 <head>
     <title>Search Results</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+     <link rel="stylesheet" href="/css/home_user.css">
     <style>
 	        body {
 			    font-family: Arial, sans-serif;
-			    background-color: #f5f5f5;
+			    background-color: white;
 			    margin: 0;
-			    padding: 20px;
 			}
 			
 			.container {
@@ -131,6 +132,7 @@
     </style>
 </head>
 <body>
+	<header id="header"></header>
     <div class="container">
         
             <div  class="card" th:each="tour : ${searchResults}" onclick="linktoDetailTour(this)" th:attr="data-id=${tour.tourId}">
@@ -228,5 +230,6 @@
     });
 	
 </script>
+<script src="/js/header.js"></script>
 </body>
 </html>
