feature create promotions, apply discount code for tour and filter promotion by date

--- a/WebTour/src/main/resources/static/css/base.css
+++ b/WebTour/src/main/resources/static/css/base.css
@@ -130,3 +130,11 @@ ul {
 .btn-cancel:hover, .btn-confirm:hover {
 	cursor: pointer;
 }
+
+.mr-10{
+	margin-right: 10px;
+}
+
+.mr-50{
+	margin-right: 50px;
+}
