--- a/WebTour/src/main/resources/static/css/modal.css
+++ b/WebTour/src/main/resources/static/css/modal.css
@@ -169,3 +169,12 @@
 .auth-form__help-forgot:hover {
 	cursor: pointer;
 }
+
+.auth-form-program {
+	width: 1100px;
+	background-color: var(--white-color);
+	overflow: hidden;
+	border-radius: 5px;
+	max-height: 100%; 
+    overflow-y: auto;
+}
