--- a/WebTour/src/main/resources/static/css/promotion.css
+++ b/WebTour/src/main/resources/static/css/promotion.css
@@ -6,6 +6,13 @@
 	margin-bottom: 20px;
 }
 
+button.applied {
+    background-color: #28a745;
+    color: white;             
+    cursor: not-allowed;  
+}
+
+
 .tabs a {
 	padding: 10px 20px;
 	text-decoration: none;
@@ -76,6 +83,11 @@ th, td {
 	padding: 4px;
 }
 
+
+.datetime-start:hover, .datetime-end:hover {
+	cursor: pointer;
+}
+
 .description{
 	border: 1px solid var(--border-color);
     border-radius: 6px;
@@ -85,13 +97,14 @@ th, td {
 .create-promotion-btn {
 	padding: 10px;
 	border-radius: 4px;
-	background-color: #2694ed;
+	background-color: #3498db;
 	color: white;
 	font-weight: 500;
 }
 
 .create-promotion-btn:hover {
 	cursor: pointer;
+	background-color: #3288de;
 }
 
 .filter {
@@ -108,6 +121,16 @@ th, td {
 }
 
 .filter button {
+	padding: 5px 18px;
+	background-color: #3498db;
+	color: white;
+	border: none;
+	border-radius: 4px;
+}
+
+.filter button:hover {
+	cursor: pointer;
+	background-color: #3288de;
 	padding: 5px 10px;
 	background-color: #3498db;
 	color: white;
