--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -67,11 +67,11 @@
 			<div class="section-title">Thanh toán</div>
 			<div class="payment-methods">
 				<label> 
-					<input checked id="payment-online" name="payment" type="radio" value="online" />Online 
+					<input  id="payment-online" name="payment" type="radio" value="online" />Online 
 					<i class="fas fa-money-bill-wave"> </i>
 				</label> 
 				<label> 
-					<input id="payment-cash" name="payment" type="radio" value="cash" />Cash 
+					<input checked id="payment-cash" name="payment" type="radio" value="cash" />Cash 
 					<i class="fas fa-money-bill-wave"></i>
 				</label>
 			</div>
@@ -125,11 +125,13 @@
 					<span>Tổng cộng</span> 
 					<span id="total-price" class="total-amount">0₫</span>
 				</div>
+				
 				<div class="actions">
 					
 					<button  id="bt-pay" class="order-button">Thanh toán</button>
-					
 				</div>
+				
+				
 				<div id="paypal-button-container"></div>
 				<a href="#" class="back-to-cart">‹ Quay về giỏ hàng</a>
 			</div>
