fix homeAdmin, add userService, css sidebar admin

--- a/WebTour/src/main/resources/templates/Admin/home.html
+++ b/WebTour/src/main/resources/templates/Admin/home.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Management</title>
 <link rel="stylesheet" href="/css/home_admin.css">
+<link rel="stylesheet" href="/css/sidebar_admin.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -17,15 +18,16 @@
 <body>
 	<div class="sidebar">
 		<div class="logo">
-			<img alt="" height="50" src="" width="50" />
+			<img alt="" height="50" width="50" src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg" />
 		</div>
 		<ul class="nav">
-			<li><a href="#"> <i class="fas fa-home"> </i> Dashboard
+			<li><a th:href="@{/admin}"> <i class="fas fa-home"> </i> Dashboard
 			</a></li>
 			<li><a href="#"> <i class="fas fa-envelope"> </i> Email
 			</a></li>
-			<li><a th:href="@{/admin/customer-management}"> <iclass
-						="fasfa-edit"> </i> Customer </a></li>
+			<li><a th:href="@{/admin/customer-management}"> <i
+					class="fas fa-edit"> </i> Customer
+			</a></li>
 			<li><a th:href="@{/admin/promotion-management}"> <i
 					class="fas fa-edit"> </i> Promotion
 			</a></li>
