--- a/WebTour/src/main/resources/templates/Admin/customer_management.html
+++ b/WebTour/src/main/resources/templates/Admin/customer_management.html
@@ -6,7 +6,7 @@
 <title>Quản lý khách hàng</title>
 <link rel="stylesheet" href="/css/home_admin.css">
 <link rel="stylesheet" href="/css/base.css">
-<link rel="stylesheet" href="/css/customer.css">
+<link rel="stylesheet" href="/css/sidebar_admin.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -19,10 +19,10 @@
 <body>
 	<div class="sidebar">
 		<div class="logo">
-			<img alt="" height="50" src="" width="50" />
+			<img alt="" height="50" width="50" src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg" />
 		</div>
 		<ul class="nav">
-			<li><a href="#"> <i class="fas fa-home"> </i> Dashboard
+			<li><a th:href="@{/admin}"> <i class="fas fa-home"> </i> Dashboard
 			</a></li>
 			<li><a href="#"> <i class="fas fa-envelope"> </i> Email
 			</a></li>
@@ -48,6 +48,11 @@
 		</div>
 		<div class="table-container">
 			<h2 class="mb-20">Customer</h2>
+			<div class="filter">
+				
+				<button id="filter-customer-desc">Tăng</button>
+				<button id="filter-customer-asc">Giảm</button>
+			</div>
 			<table>
 				<thead>
 					<tr>
@@ -55,20 +60,22 @@
 						<th>Full name</th>
 						<th>Phone</th>
 						<th>Email</th>
-						<th>Action</th>
+						<th>Gender</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody id="user-table">
 					<tr th:each="user : ${users}">
 						<td th:text="${user.user_id}"></td>
 						<td th:text="${user.fullName}"></td>
 						<td th:text="${user.phone}"></td>
 						<td th:text="${user.email}"></td>
-						<td><a>Edit</a> <a>Delete</a></td>
+						<td th:text="${user.gender}"></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
-</body>
+	
+	<script src="../js/customer_management.js"></script>
+</body> 
 </html>
