--- a/WebTour/src/main/resources/templates/Admin/promotion_management.html
+++ b/WebTour/src/main/resources/templates/Admin/promotion_management.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="/css/modal.css">
 <link rel="stylesheet" href="/css/base.css">
 <link rel="stylesheet" href="/css/promotion.css">
+<link rel="stylesheet" href="/css/sidebar_admin.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -19,10 +20,10 @@
 <body>
 	<div class="sidebar">
 		<div class="logo">
-			<img alt="" height="50" src="" width="50" />
+			<img alt="" height="50" width="50" src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg" />
 		</div>
 		<ul class="nav">
-			<li><a href="#"> <i class="fas fa-home"> </i> Dashboard
+			<li><a th:href="@{/admin}"> <i class="fas fa-home"> </i> Dashboard
 			</a></li>
 			<li><a href="#"> <i class="fas fa-envelope"> </i> Email
 			</a></li>
